# ozbe14_miniproject

./: .env  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  README.md  database.py  main.py  models.py  pyproject.toml
app/: main.py
app/api/: auth.py
app/api/v1/: auth.py  diary.py  question.py  quote.py
app/core/: config.py  security.py
app/db/: database.py  seed_questions.py
app/db/migrations/models/: 0_20251026213416_init.py  1_20251028165753_None.py  2_20251029152246_update.py
app/models/: __init__.py  bookmark.py  diary.py  models.py  question.py  quote.py  token.py  user.py
app/schemas/: diary.py  user.py
app/scraping/: .gitignore  blogscrap_original.py  check_db.py  onesentence.txt  reset_db.py  scrap.py  scrap2.py
app/scraping/funct/: blogscrap_modify.py  dbinsert.py
app/services/: auth_service.py  question_service.py
app/static/: home.css  home.js
app/static/css/: home.css  main.css
app/static/js/: home.js  home2.js  main.js
app/templates/: home.html  main.html
migrations/models/: 1_20251029112140_update.py
repositories/app/models/: Base.py  Bookmark.py  Bookmark_repo.py  Diary.py  Diary_repo.py  Quote.py  Quote_repo.py  User_repo.py
repositories/app/models/user/: user.py
